--- a/index.html
+++ b/index.html
@@ -104,13 +104,12 @@
                     <div class="hero__content-container">
                         <div class="hero__text-container">
                             <h1 class="hero__text-heading">
-                                Elevate Your Business with
-                                <span class="text-gradient">Expert</span>
-                                Virtual Assistance
+                                Grow Your Business with
+                                <span class="text-gradient">Paragon</span>
+                                Virtual Assistants
                             </h1>
                             <p class="hero__text-desc">
-                                Paragon Virtual Assistants provides top-tier support to help you focus on what matters
-                                most - growing your business.
+                                Reliable, professional, and scalable VA services for entrepreneurs, small businesses, and e-commerce brands.
                             </p>
                             <div class="hero__text-list">
                                 <ul class="hero__list">
@@ -157,7 +156,7 @@
                                 </a>
                                 <a href="https://calendly.com" target="_blank" rel="noopener noreferrer">
                                     <button class="hero-btn-2">
-                                        Book a Consultation
+                                        Book a Free Discovery Call
                                     </button>
                                 </a>
                             </div>
@@ -229,7 +228,7 @@
                         </div>
                         <div class="card-body">
                             <p class="desc">
-                                Manage your online store seamlessly with our expert assistance in:
+                                Product listings, order tracking, returns, customer support, and platform management (Shopify, Etsy, Amazon).
                             </p>
                             <ul class="list space-y-2">
                                 <li class="list-item">
@@ -286,8 +285,8 @@
                             <h3 class="heading">Executive Assistance</h3>
                         </div>
                         <div class="card-body">
-                            <p class="desc">Regain valuable time with our professional executive
-                                assistants handling:</p>
+                            <p class="desc">Inbox and calendar management, travel booking, document organization, and
+                                administrative support.</p>
                             <ul class="list">
                                 <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -328,7 +327,8 @@
                             <h3 class="heading">Social Media Management</h3>
                         </div>
                         <div class="card-body">
-                            <p class="desc">Enhance your online presence with:</p>
+                            <p class="desc">Scheduling content, community engagement, analytics, and growth strategy on
+                                major platforms.</p>
                             <ul class="list">
                                 <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -408,17 +408,12 @@
                                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                         stroke-linecap="round" stroke-linejoin="round" class="icon">
                                         <path d="M20 6 9 17l-5-5"></path>
-                                    </svg><span class="text">Email &amp; calendar management</span></li>
+                                    </svg><span class="text">Email & calendar management</span></li>
                                 <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                         stroke-linecap="round" stroke-linejoin="round" class="icon">
                                         <path d="M20 6 9 17l-5-5"></path>
                                     </svg><span class="text">Weekly task summary</span></li>
-                                <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                        <path d="M20 6 9 17l-5-5"></path>
-                                    </svg><span class="text">1 primary VA</span></li>
                             </ul>
                         </div>
                     </div>
@@ -450,12 +445,7 @@
                                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                         stroke-linecap="round" stroke-linejoin="round" class="icon">
                                         <path d="M20 6 9 17l-5-5"></path>
-                                    </svg><span class="text">Project &amp; social media support</span></li>
-                                <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                        <path d="M20 6 9 17l-5-5"></path>
-                                    </svg><span class="text">Bi-weekly check-ins</span></li>
+                                    </svg><span class="text">Project & social media support</span></li>
                             </ul>
                         </div>
                     </div>
@@ -481,19 +471,14 @@
                                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                         stroke-linecap="round" stroke-linejoin="round" class="icon">
                                         <path d="M20 6 9 17l-5-5"></path>
-                                    </svg><span class="text">Multiple VA specialists (admin + creative)</span>
+                                    </svg><span class="text">Multiple VA specialists</span>
                                 </li>
                                 <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                         stroke-linecap="round" stroke-linejoin="round" class="icon">
                                         <path d="M20 6 9 17l-5-5"></path>
-                                    </svg><span class="text">Advanced task automation &amp; reporting</span>
+                                    </svg><span class="text">Advanced task automation & reporting</span>
                                 </li>
-                                <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                        <path d="M20 6 9 17l-5-5"></path>
-                                    </svg><span class="text">Priority response + support desk</span></li>
                             </ul>
                         </div>
                     </div>
@@ -548,13 +533,11 @@
                                     </path>
                                 </svg></div>
                         </div>
-                        <p class="review">As a busy executive, I needed
-                            reliable support for scheduling and administrative tasks. The executive assistance from
-                            Paragon has been exceptional - professional, efficient, and incredibly detail-oriented.</p>
-                        <div class="author-dets"><span class="short-name-contianer"><span>AP</span></span>
+                        <p class="review">Paragon VAs saved me 15 hours a week. I finally have time to focus on growing my business.</p>
+                        <div class="author-dets"><span class="short-name-contianer"><span>SJ</span></span>
                             <div class="name-container">
-                                <p class="name">Amelia Patel</p>
-                                <p class="occupation">CEO, Tech Startup</p>
+                                <p class="name">Sarah J.</p>
+                                <p class="occupation">Online Store Owner</p>
                             </div>
                         </div>
                         <div class="testimonial__nav-container">
@@ -770,9 +753,9 @@
         <section id="contact" class="section-padding contact__section">
             <div class="contact__container container">
                 <div class="main__text-container">
-                    <h2 class="heading">Ready to Get Started?</h2>
+                    <h2 class="heading">Ready to Delegate and Scale?</h2>
                     <p class="desc">
-                        Take the first step towards reclaiming your time and growing your business
+                        Book a free discovery call today and learn how Paragon Virtual Assistants can support your goals.
                     </p>
                 </div>
                 <div class="box__wrapper">
@@ -788,7 +771,9 @@
                         <p class="desc"><a href="mailto:info@hireparagonva.com"
                                 class="text-paragon-400 hover:text-white transition-colors">info@hireparagonva.com</a>
                         </p>
-                        <button class="btn">Contact Form</button>
+                        <a href="https://tally.so/" target="_blank" rel="noopener noreferrer" class="btn">
+                            Contact Form
+                        </a>
                     </div>
                     <div class="contact__box"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -798,7 +783,7 @@
                             <rect width="18" height="18" x="3" y="4" rx="2"></rect>
                             <path d="M3 10h18"></path>
                         </svg>
-                        <h3 class="heading">Book a Consultation</h3>
+                        <h3 class="heading">Schedule My Call</h3>
                         <p class="desc">Schedule a 15-minute call with our team to explore how we can help
                             your business.
                         </p>
